--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 [Ll]ibrary/
+[Ll]ogs
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
@@ -34,3 +35,9 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+#Rider
+.idea/*
+Assets/Plugins*
+
+ProjectSettings/ProjectVersion.txt
