--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "1.2.9",
     "com.unity.package-manager-ui": "2.1.0-preview.1",
     "com.unity.purchasing": "2.0.1",
+    "com.unity.render-pipelines.high-definition": "5.0.0-preview",
     "com.unity.render-pipelines.lightweight": "5.0.0-preview",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
