--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.0.9",
-    "com.unity.collab-proxy": "1.2.9",
-    "com.unity.package-manager-ui": "2.1.0-preview.1",
+    "com.unity.analytics": "3.2.2",
+    "com.unity.collab-proxy": "1.2.15",
+    "com.unity.package-manager-ui": "2.1.1",
     "com.unity.purchasing": "2.0.1",
-    "com.unity.render-pipelines.high-definition": "5.0.0-preview",
-    "com.unity.render-pipelines.lightweight": "5.0.0-preview",
+    "com.unity.render-pipelines.high-definition": "5.2.3-preview",
+    "com.unity.render-pipelines.lightweight": "5.2.3",
     "com.unity.textmeshpro": "1.3.0",
+    "com.unity.timeline": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
