--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,14 @@
 {
   "dependencies": {
-    "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.2.2",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.1.1",
-    "com.unity.purchasing": "2.0.1",
-    "com.unity.render-pipelines.high-definition": "5.2.3-preview",
-    "com.unity.render-pipelines.lightweight": "5.2.3",
-    "com.unity.textmeshpro": "1.3.0",
-    "com.unity.timeline": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "1.0.0",
+    "com.unity.ads": "4.0.0",
+    "com.unity.analytics": "3.7.1",
+    "com.unity.collab-proxy": "1.15.7",
+    "com.unity.purchasing": "4.1.2",
+    "com.unity.render-pipelines.high-definition": "14.0.0",
+    "com.unity.render-pipelines.universal": "14.0.0",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.0-pre.1",
+    "com.unity.xr.legacyinputhelpers": "2.1.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
